로그인 구현 성공, 로그인용 뷰는 없음, 체험을 위한 도메인 연결? 조건 : 같은 와이파이 사용 중 ipconfig getifaddr en0 - 터미널 입력 후 나오는 ip주소:8084 를 도메인으로 바꾼 후 도메인 주소 알려주며 실행

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -104,7 +104,7 @@
             display:inline;
             margin-right: 20px;
             float:right;
-            font-size:1px;
+            font-size:13px;
         }
 
         .c_bar {
@@ -136,8 +136,8 @@
 
 <header>
     <ul id="customer">
-        <li><a href="#">회원가입</a></li>
-        <li><a href="#">로그인</a></li>
+        <li><a href="members/join">회원가입</a></li>
+        <li><a href="members/login">로그인</a></li>
     </ul>
     <h1>성신여대 청원</h1>
     <p>수정이들의 많은 참여....</p>
